# bqf

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  test_failure.sh  test_memory
benchmark/: benchmark.cpp
examples/: build_smer_files.txt  ecoli.cpp  main_example.cpp
examples/data/: queries.fasta
sorter/: CMakeLists.txt
sorter/apps/: sorter.cpp
sorter/src/: bench_sorter.cpp  kmer_sorter.cpp  testbench.cpp
sorter/src/progress/: progressbar.cpp
sorter/src/sorting/: crumsort.hpp  crumsort_2cores.hxx  merge_sort.hxx  merge_sort_v2.hxx  merge_sort_v3.hxx  quadsort.hpp  quicksort.hpp  scalar_algos.hxx  seq_sort.hxx  std_2cores.cpp  std_2cores.hpp  std_2cores.hxx  std_4cores.cpp  std_4cores.hpp  std_4cores.hxx
sorter/src/tools/: tools.cpp  tools.hpp  vec_compare.hxx  vec_copy.hxx  vec_print.hxx  vec_random.hxx
src/: CMakeLists.txt  abstract_bqf.cpp  additional_methods.cpp  bqf_cf.cpp  bqf_ec.cpp  bqf_ec_resize.cpp  bqf_oom.cpp  main.cpp  rsqf.cpp
src/generic/: bitrankasm.hpp  bitselectasm.hpp  functions.hpp  pdep.hpp  popcount.hpp  tzcnt.hpp
src/headers/: abstract_bqf.hpp  additional_methods.hpp  bqf_cf.hpp  bqf_ec.hpp  bqf_ec_resize.hpp  bqf_oom.hpp  rsqf.hpp
test/: CMakeLists.txt  perfResize.cpp  quicktests.cpp  resizeTests.cpp  resize_performances.cpp  resize_performances1.cpp  resize_performances2.cpp  resize_tests.cpp  testing.cpp
unitary_tests/: cqf_test.cpp
